connected to mongo and set up put method as base
