# routes/customers.js
@@ -1,10 +1,12 @@
 const customerRoutes = require('express').Router();
-const { allCustomers, upsertCustomer} = require('../controllers/customers')
+const { allCustomers, insertCustomer, updateCustomer, getCustomer, deleteCustomer} = require('../controllers/customers')
 
 
 customerRoutes.get('/', allCustomers)
-customerRoutes.post('/', upsertCustomer)
-
+customerRoutes.post('/', insertCustomer)
+customerRoutes.get('/:id', getCustomer)
+customerRoutes.delete('/:id', deleteCustomer)
+customerRoutes.put('/:id', updateCustomer)
 
 
 
