# routes/tickets.js
@@ -1,8 +1,12 @@
 const ticketRoutes = require('express').Router();
-const { allTickets, upsertTicket } = require('../controllers/tickets')
+const { allTickets, insertTicket, getTicket, deleteTicket, updateTicket } = require('../controllers/tickets')
 
 ticketRoutes.get('/', allTickets)
-ticketRoutes.post('/', upsertTicket)
+ticketRoutes.post('/', insertTicket)
+ticketRoutes.get('/:id', getTicket)
+ticketRoutes.delete('/:id', deleteTicket)
+ticketRoutes.put('/:id', updateTicket)
+
 
 
 module.exports = ticketRoutes
